--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/MVCStudenClassAssinment.csproj
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/MVCStudenClassAssinment.csproj
@@ -137,6 +137,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ApplicationDBContext_5.mdf" />
+    <Content Include="App_Data\ApplicationDBContext_5_log.ldf">
+      <DependentUpon>ApplicationDBContext_5.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -189,7 +193,6 @@
     <Content Include="Views\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Error\" />
   </ItemGroup>
