--- a/MVCStudenClassAssinment/MVCStudenClassAssinment/MVCStudenClassAssinment.csproj
+++ b/MVCStudenClassAssinment/MVCStudenClassAssinment/MVCStudenClassAssinment.csproj
@@ -156,6 +156,7 @@
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\CommanScript\CommanScript.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
